variables.Variables.scala.error
Compilation error:
Variables:8: error: '(' expected but identifier found.
while doneSteps!=stepAmount {
      ^